# Vestify

./: .gitignore  CMakeLists.txt  Makefile  README.md  dox.config  scoring_tests
data/: nasdaq100_fundamentals_full.csv
data/historical/: AAPL_daily.csv
docs/html/: _backtest_engine_8cpp.html  _backtest_engine_8hpp.html  _backtest_engine_8hpp.js  _backtest_engine_8hpp_source.html  _bar_8hpp_source.html  _c_s_v_loader_8hpp.html  _c_s_v_loader_8hpp.js  _c_s_v_loader_8hpp_source.html  _efficiency_scoring_model_8hpp.html  _efficiency_scoring_model_8hpp.js  _efficiency_scoring_model_8hpp_source.html  _foo_8hpp_source.html  _fuzzer_corpus_8h_source.html  _fuzzer_defs_8h_source.html  _fuzzer_dictionary_8h_source.html  _fuzzer_ext_functions_8h_source.html  _fuzzer_i_o_8h_source.html  _fuzzer_interface_8h_source.html  _fuzzer_internal_8h_source.html  _fuzzer_merge_8h_source.html  _fuzzer_mutate_8h_source.html  _fuzzer_options_8h_source.html  _fuzzer_random_8h_source.html  _fuzzer_s_h_a1_8h_source.html  _fuzzer_trace_p_c_8h_source.html  _fuzzer_util_8h_source.html  _fuzzer_value_bit_map_8h_source.html  _growth_scoring_model_8hpp.html  _growth_scoring_model_8hpp.js  _growth_scoring_model_8hpp_source.html  _interactive_menu_8cpp.html  _interactive_menu_8cpp.js  _interactive_menu_8hpp.html  _interactive_menu_8hpp.js  _interactive_menu_8hpp_source.html  _live_data_provider_8cpp.html  _live_data_provider_8cpp.js  _live_data_provider_8hpp.html  _live_data_provider_8hpp.js  _live_data_provider_8hpp_source.html  (+1607 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_25.js  all_26.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  (+128 more)
docs/latex/: _backtest_engine_8cpp.tex  _backtest_engine_8hpp.tex  _backtest_engine_8hpp_source.tex  _bar_8hpp_source.tex  _c_s_v_loader_8hpp.tex  _c_s_v_loader_8hpp_source.tex  _efficiency_scoring_model_8hpp.tex  _efficiency_scoring_model_8hpp_source.tex  _foo_8hpp_source.tex  _fuzzer_corpus_8h_source.tex  _fuzzer_defs_8h_source.tex  _fuzzer_dictionary_8h_source.tex  _fuzzer_ext_functions_8h_source.tex  _fuzzer_i_o_8h_source.tex  _fuzzer_interface_8h_source.tex  _fuzzer_internal_8h_source.tex  _fuzzer_merge_8h_source.tex  _fuzzer_mutate_8h_source.tex  _fuzzer_options_8h_source.tex  _fuzzer_random_8h_source.tex  _fuzzer_s_h_a1_8h_source.tex  _fuzzer_trace_p_c_8h_source.tex  _fuzzer_util_8h_source.tex  _fuzzer_value_bit_map_8h_source.tex  _growth_scoring_model_8hpp.tex  _growth_scoring_model_8hpp_source.tex  _interactive_menu_8cpp.tex  _interactive_menu_8hpp.tex  _interactive_menu_8hpp_source.tex  _live_data_provider_8cpp.tex  _live_data_provider_8hpp.tex  _live_data_provider_8hpp_source.tex  _momentum_scoring_model_8hpp.tex  _momentum_scoring_model_8hpp_source.tex  _quality_scoring_model_8hpp.tex  _quality_scoring_model_8hpp_source.tex  _scoring_model_8hpp.tex  _scoring_model_8hpp_source.tex  _screening_menu_8cpp.tex  _screening_menu_8hpp.tex  (+882 more)
include/backtest/: BacktestEngine.hpp
include/core/: Stock.hpp  StockRepository.hpp  WatchList.hpp
include/data/: CSVLoader.hpp  LiveDataProvider.hpp
include/persistence/: WatchListRep.hpp  WatchListRepo.hpp
include/scoring/: EfficiencyScoringModel.hpp  GrowthScoringModel.hpp  MomentumScoringModel.hpp  QualityScoringModel.hpp  ScoringModel.hpp  StrategyPresent.hpp  ValueScoringModel.hpp
include/screening/: StockScreener.hpp
include/ui/: InteractiveMenu.hpp  ScreeningMenu.hpp  StockPrinter.hpp
scripts/: update_data.py
src/: main.cpp
src/backtest/: BacktestEngine.cpp
src/core/: StockRepository.cpp  WatchList.cpp
src/data/: LiveDataProvider.cpp
src/persistence/: WatchlistRepo.cpp  demo_watchlist.json
src/screening/: StockScreener.cpp
src/ui/: InteractiveMenu.cpp  ScreeningMenu.cpp  StockPrinter.cpp
tests/: CMakeLists.txt  anal_prober.cpp  test_backtest.cpp  test_csv_load.cpp  test_csv_loader.cpp  test_scoring.cpp  test_screening_menu.cpp  test_stock_printer.cpp  test_stock_screener.cpp  test_watchlist.cpp
